# lightning-mlops-stack

./: .gitignore  Makefile  README.md  pyproject.toml
archive/: .gitignore  commands.md
archive/datasets/adult/: Index  adult.names  old.adult.names
archive/models/diego/: dataloader.py  model.py  predict.py  train.py
archive/models/diego/datasets/test/: second_half.csv
models/adrien/: mlflow.db  model.ipynb
models/adrien/mlruns/0/: meta.yaml
models/adrien/mlruns/319740347204362983/: meta.yaml
models/adrien/mlruns/319740347204362983/9ebc028961f946408d6e491986b9f1e4/: meta.yaml
models/adrien/mlruns/319740347204362983/a804be5c88954bcd9dd96f7d2aab9f73/: meta.yaml
models/adrien/mlruns/319740347204362983/c2362ed465c7499ebfa3d014807d7b24/: meta.yaml
models/adrien/mlruns/319740347204362983/c497c04c659c46b09a0757e65237876a/: meta.yaml
models/adrien/mlruns/319740347204362983/e3114e1d3e674725a0407f5b8f0b43e2/: meta.yaml
models/adrien/mlruns/319740347204362983/e6d28133f92040f3ab6a1960dbaed7f4/: meta.yaml
models/diego/: dataloader.py  mlflow.db  predict.py
models/diego/lightning_logs/version_0/: events.out.tfevents.1772998953.fedora.58534.0
models/diego/lightning_logs/version_1/: events.out.tfevents.1772998983.fedora.58967.0  hparams.yaml
srcs/: .env  docker-compose.yml  init.sql
srcs/api/: app.py
srcs/data/minio/.minio.sys/: format.json
srcs/model/: RoadMap.txt  dataloader.py  features_answer.py  note.md
srcs/scripts/logs/: kill-finder.sh  log-finder.sh
srcs/services/nginx/: Dockerfile
srcs/services/postgresql/: Dockerfile
(+70 files in other folders)
