[project]
name = "lightning-mlops-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
	"category-encoders>=2.8.1",
	"lightning>=2.6.1",
	"pandas<3",
	"scikit-learn>=1.7.2",
	"setuptools<82.0.0",
	"ydata-profiling>=4.18.1",
]
